# nixfleet

./: .bundle-c-decisions.md  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISASTER-RECOVERY.md  LICENSE-AGPL  LICENSE-MIT  QUICKSTART.md  README.md  SECURITY.md  TECHNICAL.md  TODO.md  cargo-workspace.nix  crane-workspace.nix  flake.nix  rust-toolchain.toml
agent/: Cargo.toml  default.nix
agent/src/: comms.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  nix.rs  platform.rs  state.rs  store.rs  tls.rs  types.rs
agent/src/health/: command.rs  config.rs  http.rs  launchd.rs  mod.rs  systemd.rs
agent/tests/: integration.rs  run_loop_scenarios.rs
cli/: Cargo.toml  default.nix
cli/src/: client.rs  completions.rs  config.rs  deploy.rs  display.rs  git.rs  glob.rs  host.rs  lib.rs  machines.rs  main.rs  oplog.rs  policy.rs  release.rs  rollout.rs  schedule.rs  status.rs  validate.rs  watch.rs
cli/tests/: config_scenarios.rs  release_delete_scenarios.rs  release_hook_scenarios.rs  rollback_cli_scenarios.rs  scenarios.rs  subcommand_coverage.rs
cli/tests/scenarios/: config.rs  harness.rs  release_delete.rs  release_hook.rs  rollback.rs  subcommand_coverage.rs
control-plane/: Cargo.toml  default.nix
control-plane/migrations/: V10__releases.sql  V1__initial_schema.sql  V5__rollouts.sql  V6__health_reports.sql  V7__machine_state.sql  V7__rollout_policies.sql  V8__rollout_events.sql  V9__scheduled_rollouts.sql
control-plane/src/: audit.rs  auth.rs  auth_cn.rs  db.rs  lib.rs  main.rs  metrics.rs  routes.rs  state.rs  tls.rs
control-plane/src/release/: routes.rs
control-plane/src/rollout/: batch.rs  executor.rs  mod.rs  policy.rs  routes.rs  schedule.rs
control-plane/tests/: agent_integration.rs  audit_scenarios.rs  auth_matrix.rs  auth_scenarios.rs  cn_validation_scenarios.rs  deploy_scenarios.rs  executor_transition_scenarios.rs  failure_scenarios.rs  harness.rs  hydration_scenarios.rs  infra_scenarios.rs  machine_scenarios.rs  metrics_scenarios.rs  migrations_scenarios.rs  polling_scenarios.rs  release_scenarios.rs  rollback_scenarios.rs  route_coverage.rs  route_coverage_machines.rs  route_coverage_misc.rs  route_coverage_releases.rs  route_coverage_rollouts.rs  scenarios.rs
control-plane/tests/scenarios/: auth.rs  deploy.rs  failure.rs  harness.rs  hydration.rs  machine.rs  metrics.rs  polling.rs  release.rs  route_coverage.rs
crates/nixfleet-agent/: Cargo.toml
crates/nixfleet-agent/src/: checkin_state.rs  comms.rs  compliance.rs  enrollment.rs  evidence_signer.rs  freshness.rs  health.rs  host_facts.rs  lib.rs  main.rs  manifest_cache.rs  recovery.rs
crates/nixfleet-agent/src/activation/: darwin.rs  linux.rs  mod.rs  pipeline.rs  profile.rs  realise.rs  rollback.rs  types.rs  verify_poll.rs
crates/nixfleet-agent/src/dispatch/: activate.rs  compliance.rs  confirm.rs  deferred.rs  manifest_error.rs  mod.rs  quarantined.rs  realise_failed.rs  rollback.rs  verify_mismatch.rs
crates/nixfleet-agent/src/host_facts/: darwin.rs  linux.rs
crates/nixfleet-agent/tests/: boot_recovery_integration.rs
crates/nixfleet-canonicalize/: Cargo.toml
crates/nixfleet-canonicalize/src/: lib.rs  main.rs
crates/nixfleet-canonicalize/tests/: jcs_golden.rs  rfc8785_appendix_e.rs
crates/nixfleet-canonicalize/tests/fixtures/: jcs-golden.canonical  jcs-golden.json
crates/nixfleet-cli/: Cargo.toml
crates/nixfleet-cli/src/: color.rs  config.rs  lib.rs  main.rs  operator_cert.rs
crates/nixfleet-cli/src/commands/: derive_pubkey.rs  mint_operator_cert.rs  mint_token.rs  mod.rs
crates/nixfleet-cli/tests/: cli_status_e2e.rs  config_loader.rs  mint_operator_cert_smoke.rs  mint_token_smoke.rs
crates/nixfleet-control-plane/: Cargo.toml
crates/nixfleet-control-plane/fixtures/observed/: empty.json  fresh-rollout.json  in-progress.json
crates/nixfleet-control-plane/migrations/: V001__schema.sql  V002__rollouts_table.sql  V003__rollouts_current_wave.sql  V004__rollouts_terminal_at.sql  V005__pending_confirms_deferred_state.sql  V006__dispatch_history_converged_at_dispatch.sql  V007__quarantined_closures.sql  V1__initial.sql
crates/nixfleet-control-plane/src/: auth_cn.rs  deferrals_view.rs  dispatch.rs  forgejo_poll.rs  issuance.rs  lib.rs  lifecycle_parity_tests.rs  main.rs  metrics.rs  observed_projection.rs  observed_view.rs  rollouts_source.rs  server.rs  state.rs  state_view.rs  tls.rs
crates/nixfleet-control-plane/src/auth/: auth_cn.rs  issuance.rs  mod.rs
crates/nixfleet-control-plane/src/db/: allowed_nonces.rs  dispatch_history.rs  mod.rs  (+8 more)
crates/nixfleet-control-plane/tests/: bootstrap_report.rs  channel_refs_gitops.rs  checkin.rs  closure_proxy.rs  confirm.rs  dispatch.rs  enroll.rs  healthz.rs  lifecycle_parity.rs  metrics.rs  not_ready_gate.rs  rebuild_recovery.rs  renew.rs  rollout_trace.rs  soak_loop.rs  wave_gate.rs  whoami.rs
crates/nixfleet-proto/: Cargo.toml
crates/nixfleet-proto/src/: agent_wire.rs  bootstrap_nonces.rs  compliance.rs  enroll_wire.rs  evidence_signing.rs  fleet_resolved.rs  fleet_view.rs  host_key.rs  host_rollout_state.rs  lib.rs  revocations.rs  rollout_manifest.rs  testing.rs  trust.rs
crates/nixfleet-proto/tests/: roundtrip.rs  trust_config.rs
crates/nixfleet-reconciler/: Cargo.toml
crates/nixfleet-reconciler/src/: action.rs  budgets.rs  edges.rs  evidence.rs  host_state.rs  lib.rs  manifest.rs  observed.rs  reconcile.rs  rollout_state.rs  trust_rotation.rs  verify.rs
crates/nixfleet-reconciler/tests/: budgets_and_edges.rs  host_transitions.rs  rollout_transitions.rs  verify.rs  verify_artifact.rs  verify_revocations.rs  verify_rollout_manifest.rs
crates/nixfleet-release/: Cargo.toml
crates/nixfleet-release/src/: git.rs  lib.rs  main.rs  sign.rs
crates/nixfleet-release/tests/: sign_smoke_roundtrip.rs
crates/nixfleet-verify-artifact/: Cargo.toml
crates/nixfleet-verify-artifact/src/: main.rs
crates/nixfleet-verify-artifact/tests/: parse_fixture_trust.rs
shared/: Cargo.toml
shared/src/: health.rs  lib.rs  metrics.rs  release.rs  rollout.rs
(+565 files in other folders)
