[package]
name = "nixfleet-agent"
version = "0.1.0"
edition = "2021"
description = "NixFleet fleet management agent"
license = "MIT"
repository = "https://github.com/your-org/nixfleet"
homepage = "https://github.com/your-org/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_agent"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-agent"
path = "src/main.rs"

[dependencies]
nixfleet-types = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
libc = "0.2"
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
# Per-metric emission tests use a thread-local DebuggingRecorder so
# they don't fight with the global metrics recorder.
metrics-util = "0.20"
tokio = { version = "1", features = ["test-util"] }
