[package]
name = "nixfleet-cli"
version = "0.1.0"
edition = "2021"
description = "NixFleet fleet management CLI"
license = "MIT"
repository = "https://github.com/your-org/nixfleet"
homepage = "https://github.com/your-org/nixfleet"
authors = ["nixfleet contributors"]

[[bin]]
name = "nixfleet"
path = "src/main.rs"

[lib]
name = "nixfleet"
path = "src/lib.rs"

[dependencies]
nixfleet-types = { path = "../shared" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "6"
hostname = "0.4"
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
tracing-indicatif = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
