[package]
name = "nixfleet-cli"
version = "0.1.0"
edition = "2021"
description = "NixFleet fleet management CLI"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[[bin]]
name = "nixfleet"
path = "src/main.rs"

[lib]
name = "nixfleet"
path = "src/lib.rs"

[dependencies]
nixfleet-types = { path = "../shared" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hostname = "0.4"
comfy-table = { version = "7", features = ["custom_styling"] }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
