[package]
name = "nixfleet-control-plane"
version = "0.1.0"
edition = "2021"
description = "NixFleet control plane server"
license = "Apache-2.0"

[dependencies]
nixfleet-types = { path = "../shared" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
nixfleet-types = { path = "../shared" }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
hex = "0.4"
