[package]
name = "nixfleet-agent"
version = "0.2.0"
edition = "2021"
description = "NixFleet fleet management agent (v0.2 poll-only skeleton)"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_agent"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-agent"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
