[package]
name = "nixfleet-agent"
description = "NixFleet fleet management agent (v0.2 poll-only skeleton)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_agent"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-agent"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
# PR-5: rcgen mints CSRs for /v1/enroll and /v1/agent/renew.
rcgen = "0.13"
sha2 = "0.10"
base64 = "0.22"
x509-parser = "0.16"
# Root-3 - host probe-output signatures. The agent
# signs ComplianceFailure / RuntimeGateError event details with the
# host's SSH ed25519 key so a third-party auditor (with fleet.nix
# pubkey) can independently verify the chain. ssh-key parses
# /etc/ssh/ssh_host_ed25519_key (OpenSSH PEM format); ed25519-dalek
# does the actual signing. serde_jcs canonicalises the payload  - 
# matches the workspace's signing contract (CONTRACTS §III).
ed25519-dalek = "2"
ssh-key = { version = "0.6", features = ["ed25519"] }
serde_jcs = "0.2"
# Polling backoff jitter (RFC-0003 §5).
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Darwin fire-and-forget detach: `setsid()` via Command::pre_exec puts
# the activation child in its own session so launchd's process-group
# SIGTERM during agent self-replacement doesn't propagate to the
# in-flight `activate` script (per v0.1.1 darwin-platform-notes.md).
# Used by the activation::fire_switch_darwin helper. libc is already
# transitively present; declaring it directly makes the use-site
# explicit and pins the Unix-only ABI.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
