[package]
name = "nixfleet-agent"
description = "NixFleet fleet management agent (v0.2 poll-only skeleton)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_agent"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-agent"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
tokio = { workspace = true }
reqwest = { workspace = true }
# PR-5: rcgen mints CSRs for /v1/enroll and /v1/agent/renew.
rcgen = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
x509-parser = { workspace = true }
# Root-3 - host probe-output signatures. The agent
# signs ComplianceFailure / RuntimeGateError event details with the
# host's SSH ed25519 key so a third-party auditor (with fleet.nix
# pubkey) can independently verify the chain. ssh-key parses
# /etc/ssh/ssh_host_ed25519_key (OpenSSH PEM format); ed25519-dalek
# does the actual signing. serde_jcs canonicalises the payload  -
# matches the workspace's signing contract (CONTRACTS §III).
ed25519-dalek = { workspace = true }
ssh-key = { workspace = true }
serde_jcs = { workspace = true }
# Polling backoff jitter (RFC-0003 §5).
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Darwin fire-and-forget detach: `setsid()` via Command::pre_exec puts
# the activation child in its own session so launchd's process-group
# SIGTERM during agent self-replacement doesn't propagate to the
# in-flight `activate` script (per v0.1.1 darwin-platform-notes.md).
# Used by the activation::fire_switch_darwin helper. libc is already
# transitively present; declaring it directly makes the use-site
# explicit and pins the Unix-only ABI.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
