[package]
name = "nixfleet-canonicalize"
description = "JCS (RFC 8785) canonicalizer for NixFleet signed artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_canonicalize"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-canonicalize"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
