[package]
name = "nixfleet-canonicalize"
description = "JCS (RFC 8785) canonicalizer for NixFleet signed artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_canonicalize"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-canonicalize"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_jcs = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
