[package]
name = "nixfleet-cli"
description = "NixFleet v0.2 operator CLI: nixfleet (status, rollout trace, config init), nixfleet-mint-token, nixfleet-mint-operator-cert, nixfleet-derive-pubkey"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# Operator CLI. Reads ~/.config/nixfleet/config.toml; flags + NIXFLEET_*
# env override.
[[bin]]
name = "nixfleet"
path = "src/bin/nixfleet.rs"

# Operator-side bootstrap-token minter. Run once per fleet host
# before first deploy; emits a one-shot signed token the agent
# uses on `/v1/enroll`.
[[bin]]
name = "nixfleet-mint-token"
path = "src/bin/mint_token.rs"

# Operator-side scratch helper: derive base64 ed25519 pubkey
# from a raw 32-byte private key file. Used once when initialising
# `nixfleet.trust.orgRootKey.current` in fleet.nix.
[[bin]]
name = "nixfleet-derive-pubkey"
path = "src/bin/derive_pubkey.rs"

# Operator cert mint: takes the offline fleet root cert+key (path resolved
# from --flag / NIXFLEET_OPERATOR_FLEET_ROOT_*_FILE / convention) and
# writes a clientAuth-EKU child cert + private key under
# ~/.config/nixfleet/operator.{pem,key}. ECDSA-P-256, 365d default.
[[bin]]
name = "nixfleet-mint-operator-cert"
path = "src/bin/mint_operator_cert.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
is-terminal = "0.4"
rcgen = { version = "0.13", default-features = false, features = ["pem", "x509-parser", "aws_lc_rs", "crypto"] }
whoami = "1"

[dev-dependencies]
tempfile = "3"
x509-parser = "0.16"
# E2E integration test (`tests/cli_status_e2e.rs`): boot a real CP, drive
# 2 mTLS checkins, then exercise `run_status` as an operator CN. Versions
# match the CP crate's own deps so the workspace stays single-version
# (no `[workspace.dependencies]` table — pin per-crate).
nixfleet-control-plane = { path = "../nixfleet-control-plane" }
rustls = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
