[package]
name = "nixfleet-cli"
description = "NixFleet v0.2 operator CLI: nixfleet (status, rollout trace, config init, derive-pubkey, mint-operator-cert, mint-token)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# Operator CLI. Reads ~/.config/nixfleet/config.toml; flags + NIXFLEET_*
# env override.
[[bin]]
name = "nixfleet"
path = "src/bin/nixfleet.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
is-terminal = { workspace = true }
rcgen = { workspace = true }
whoami = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
x509-parser = { workspace = true }
# E2E integration test (`tests/cli_status_e2e.rs`): boot a real CP, drive
# 2 mTLS checkins, then exercise `run_status` as an operator CN. Workspace
# deps centralise versions; features in workspace are the union the CP
# itself uses, so re-using here keeps the dep graph single-version.
nixfleet-control-plane = { path = "../nixfleet-control-plane" }
rustls = { workspace = true }
tracing-subscriber = { workspace = true }
