[package]
name = "nixfleet-control-plane"
description = "NixFleet control plane - Phase 3: long-running TLS server + reconciler tick loop"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_control_plane"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-control-plane"
path = "src/main.rs"

[features]
# Default-on so the operator Prometheus job (and any other operator
# scraping /metrics) sees no behavior change from the rename.
# Downstreams can drop both deps with --no-default-features.
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

# Phase 3 PR-1: re-add the wire stack the prior PR dropped when it trimmed the
# CP module to the Phase 2 oneshot-runner surface. axum/axum-server/
# rustls/rustls-pki-types ported from v0.1's working CP - same versions,
# same shape (see crates/control-plane/Cargo.toml on tag v0.1.1). The
# `tick` subcommand keeps Phase 2's oneshot-CLI behaviour for tests +
# ad-hoc operator runs; `serve` is the new long-running default.
[dependencies]
nixfleet-proto = { path = "../nixfleet-proto", features = ["rusqlite"] }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
# Graceful-shutdown plumbing - CancellationToken hands a single
# cancel-fanout to every spawned background loop (reconcile, polls,
# timers) so SIGTERM drains in-flight work instead of dropping it.
tokio-util = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
# PR-2 - mTLS + /v1/whoami. axum-server 0.7 doesn't expose peer
# certificates through any public API (upstream issue #162); we vendor a
# trimmed `auth_cn` module wrapping RustlsAcceptor to inject the cert
# chain into request extensions. x509-parser extracts the CN from the
# leaf cert; tokio-rustls + tower-service + http are the supporting
# stack the wrapper needs at the type level.
x509-parser = { workspace = true }
tokio-rustls = { workspace = true }
tower-service = { workspace = true }
http = { workspace = true }
# PR-4 - Forgejo channel-refs poll. reqwest with rustls-tls and
# native-roots so the CP picks up system trust at runtime - required
# for Forgejo deployments behind an internal CA (e.g. Caddy's local
# authority). webpki-roots alone won't trust Caddy-signed certs.
# `rustls-tls-native-roots` enables `rustls-native-certs`, which
# reads `/etc/ssl/certs` on Linux at process startup.
reqwest = { workspace = true }
base64 = { workspace = true }
# Bootstrap enrollment + cert renewal. rcgen builds + signs the
# agent certs; ed25519-dalek verifies bootstrap-token signatures
# against the org root key from trust.json; sha2 fingerprints CSR
# pubkeys for the token's expected_pubkey_fingerprint match.
#
# Workspace pins rcgen with default-features = false +
# [pem, x509-parser, aws_lc_rs, crypto]. `aws_lc_rs` over `ring` so
# `KeyPair::from_pem` accepts SEC1 / PKCS#1 / PKCS#8 - operators can
# supply OpenSSL-generated EC CA keys without offline conversion.
rcgen = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
# Root-3 - host probe-output signature verification.
# The CP parses `hosts.<hostname>.pubkey` from fleet.resolved
# (OpenSSH ed25519 format) and verifies signatures on
# ComplianceFailure / RuntimeGateError event details. Auditor chain
# closure: pubkey from fleet.nix -> JCS canonical event -> 64-byte
# ed25519 sig.
ssh-key = { workspace = true }
serde_jcs = { workspace = true }
# Phase 4 PR-1: SQLite persistence for cross-restart state. v0.1 used
# the same rusqlite + refinery stack - same versions, same posture
# (WAL + FK on at startup).
rusqlite = { workspace = true }
refinery = { workspace = true }
# Non-crypto event-id distinguisher suffixes (handlers.rs::rand_suffix).
rand = { workspace = true }
# Holds message bytes for shell-out to the TPM sign wrapper
# (`auth::issuance::TpmCaSigner`); cleaned on drop so the message
# isn't left readable on disk after issuance.
tempfile = { workspace = true }
# Prometheus counters for alerting - `/metrics` endpoint scraped by
# the operator Prometheus job. Counters-only (no state-as-label gauges);
# see `src/metrics.rs`. 0.18 + metrics-util 0.20 are the only
# combination where idle_timeout works against a real-time clock,
# verified by reproducer; we don't currently use idle_timeout but
# the version pinning prevents accidental downgrade.
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

[dev-dependencies]
# Enable the shared FleetBuilder fixture API for tests.
nixfleet-proto = { path = "../nixfleet-proto", features = ["rusqlite", "testing"] }
# `tokio::time::pause` + `start_paused` are gated on test-util; the
# graceful-shutdown unit tests use them to fast-forward past the 30s
# task-drain deadline without real wall-clock waiting.
tokio = { workspace = true, features = ["test-util"] }
# /healthz integration test: rcgen mints a self-signed server cert,
# reqwest hits the listener over TLS, asserts 200 + JSON.
rcgen = { workspace = true }
reqwest = { workspace = true }
# /v1/enroll signature-verification test: mint a real ed25519 keypair
# operator-side, sign claims, post the token.
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex = { workspace = true }
sha2 = { workspace = true }
